# yandex-translate

./: .gitignore  .travis.yml  LICENSE  README.md  yandex-translate.cabal
src/Network/Yandex/: Dictionary.hs  Translate.hs
src/Network/Yandex/Dictionary/: Types.hs
src/Network/Yandex/Translate/: Internal.hs  Types.hs
tests/Network/Yandex/: DictionarySpec.hs  TranslateSpec.hs
