name:                yandex-translate
version:             0.1.0.0
synopsis:            Bindings to Yandex translate API
-- description:         
license:             MIT
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Network.Yandex.Translate

  build-depends:       base >=4.5 && <5,
                       bytestring >=0.10 && <0.11,
                       text >=1.0,
                       aeson >= 0.7.0.3,
                       lens >= 4.5,
                       lens-aeson,
                       exceptions,
                       data-default-class,
                       unordered-containers,
                       wreq
  -- other-modules:       
  -- other-extensions:    
  ghc-options:         -funbox-strict-fields -Wall -fno-warn-name-shadowing
  hs-source-dirs:      src
  default-language:    Haskell2010
