name:                yandex-translate
version:             0.1.0.0
synopsis:            Bindings to Yandex translate API
-- description:         
license:             MIT
license-file:        LICENSE
author:              Slava Bacherikov
maintainer:          slava@bacher09.org
-- copyright:           
category:            Network
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

flag integration-tests
    default:          False
    description:      Run integration tests with real API.
                      .
                      Note, that you should set YANDEX_APIKEY_TRANSLATE env variable for this.

library
  exposed-modules:     Network.Yandex.Translate,
                       Network.Yandex.Translate.Types

  build-depends:       base >=4.5 && <5,
                       bytestring >=0.10 && <0.11,
                       text >=1.0,
                       aeson >= 0.7.0.3,
                       lens >= 4.5,
                       lens-aeson,
                       exceptions,
                       data-default-class,
                       unordered-containers,
                       transformers,
                       wreq
  -- other-modules:       
  -- other-extensions:    
  ghc-options:         -funbox-strict-fields -Wall -fno-warn-name-shadowing
  hs-source-dirs:      src
  default-language:    Haskell2010


test-suite yandex-tests

  if flag(integration-tests)
    buildable:         True
  else
    buildable:         False

  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             Spec.hs

  build-depends:       base >=4.5 && <5,
                       text >=1.0,
                       hspec-core,
                       hspec,
                       data-default-class,
                       transformers,
                       yandex-translate

  ghc-options:         -funbox-strict-fields -Wall -fno-warn-name-shadowing
